# Lite3_MotionSDK_Python

./: .gitignore  MANIFEST.in  README.md  build.zig  pyproject.toml  setup.py
.github/workflows/: release.yml
lite3_motion_sdk/: __init__.py  __init__.pyi  _lib.pyi  _types.py
scripts/: build_extension.py
src/: lite3_motion_sdk.zig
tests/: test_api.py
