[project]
name = "lite3-motion-sdk"
version = "0.1.0"
description = "Python bindings for the DeepRobotics Jueying Lite3 MotionSDK, built with Ziggy Pydust."
authors = [{ name = "DeepRoboticsLab" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = []

[dependency-groups]
dev = [
    "ziggy-pydust>=0.1.0,<0.2.0",
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.15.0,<0.16.0",
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["lite3_motion_sdk*"]
exclude = ["tests*", "scripts*"]

[tool.setuptools.package-data]
lite3_motion_sdk = ["*.abi3.so", "*.pyi", "py.typed"]

[tool.uv.sources]
ziggy-pydust = { git = "https://codeberg.org/yuke/ziggy-pydust.git" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--zig-optimize=ReleaseSafe"]

[tool.pydust]
self_managed = true
zig_tests = false
